# shopping-assistant-bot

./: .gitignore  BUSINESS_SPEC.md  README.md  TECH_SPEC.md  advisor.py  products.json  prompts.py  pyproject.toml  requirements.txt  retrieval.py
tests/: test_advisor.py  test_scenarios.py  test_scenarios_eng.py  test_scenarios_ru.py
