[tool.poetry]
name = "shopping-assistant"
version = "0.1.0"
description = "A conversational assistant for product selection."
authors = ["Your Name <you@example.com>"]
packages = [{include = "shopping_assistant"}]


[tool.poetry.dependencies]
python = ">=3.9"
langchain = ">=0.2"
rapidfuzz = "^3.9.3"
pydantic = "^2.7.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
